added unauthorized screen and updated authorization access

--- a/mern_app/src/styles/style.css
+++ b/mern_app/src/styles/style.css
@@ -8,4 +8,25 @@ textarea:invalid {
 
 .disabled-link {
     pointer-events: none;
-  }
+}
+
+.adminList {
+    text-align: center;
+}
+
+.adminList h4 {
+    margin-top: 20px;
+}
+
+.unauthImg {
+    text-align: center;
+    margin: 30px 0px;
+}
+.unauthImg img {
+    width: 320px;
+    height: 220px;
+}
+
+.restricted {
+    color: red;
+}
